# yes-man

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  mise.toml  pyproject.toml  yesme.py
.serena/: project.yml
openspec/changes/add-mise-workflow/: tasks.md
openspec/changes/archive/2026-02-24-add-mise-workflow/: design.md  proposal.md
openspec/changes/archive/2026-02-24-add-tests-and-coverage/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-24-add-tests-and-coverage/specs/unit-testing/: spec.md
openspec/changes/archive/2026-02-24-dockerize-project/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-24-dockerize-project/specs/docker-local-deploy/: spec.md
openspec/changes/archive/2026-02-24-dockerize-project/specs/mise-workflow/: spec.md
openspec/changes/deploy-azure-cloud/: design.md  proposal.md  tasks.md
openspec/changes/deploy-azure-cloud/specs/azure-ci-cd/: spec.md
openspec/changes/deploy-azure-cloud/specs/azure-infrastructure/: spec.md
openspec/changes/deploy-azure-cloud/specs/azure-provisioning/: spec.md
openspec/changes/deploy-azure-cloud/specs/docker-local-deploy/: spec.md
openspec/changes/migrate-poetry-to-uv/: design.md  proposal.md  tasks.md
openspec/changes/migrate-poetry-to-uv/specs/uv-project-config/: spec.md
openspec/specs/docker-local-deploy/: spec.md
openspec/specs/mise-workflow/: spec.md
openspec/specs/unit-testing/: spec.md
tests/: test_main.py
