[tool.poetry]
package-mode = false
name = "yes-man"
version = "0.0.2"
description = "The yes man in your life you never knew needed"
authors = ["Ratul R. <rratul@duck.com>"]
license = "The Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.104.1"}
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"
boltons = "^23.1.1"

[tool.poetry.group.dev.dependencies]
# black = "^23.11.0"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
# ipykernel = "^6.26.0"
# pandas = "^2.1.3"
# jupyterhub = "^4.0.2"
ipython = "^8.18.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=main --cov-report=term-missing"
