[tool.poetry]
package-mode = false
name = "yes-man"
version = "0.0.2"
description = "The yes man in your life you never knew needed"
authors = ["Ratul R. <rratul@duck.com>"]
license = "The Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.133.0"}
typer = {extras = ["all"], version = "^0.24.1"}
rich = "^14.3.3"
boltons = "^25.0.0"

[tool.poetry.group.dev.dependencies]
# black = "^23.11.0"
pytest = "^9.0.2"
pre-commit = "^4.5.1"
# ipykernel = "^6.26.0"
# pandas = "^2.1.3"
# jupyterhub = "^4.0.2"
ipython = "^9.10.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=main --cov-report=term-missing"
