[project]
name = "yes-man"
version = "0.0.2"
description = "The yes man in your life you never knew needed"
authors = [{ name = "Ratul R.", email = "rratul@duck.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "The Unlicense"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi[all]>=0.133.0,<0.134",
    "typer[all]>=0.24.1,<0.25",
    "rich>=14.3.3,<15",
    "boltons>=25.0.0,<26",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pre-commit>=4.5.1,<5",
    "ipython>=9.10.0,<10",
    "pytest-cov>=7.0.0,<8",
]

[tool.uv]
package = false
default-groups = "all"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=main --cov-report=term-missing"
